# phishing-database-tools-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  main.cpp  update_version_changelog.py  version.h
.github/workflows/: release.yml
